--- a/index.html
+++ b/index.html
@@ -68,8 +68,34 @@
     </div>
 </header>
 
+<section id="quienes-somos" class="bg-dark">
+  <div class="container text-center text-light">
+    <h2 class="display-5">¿Quiénes somos?</h2>
+    <div class="row">
+      <div class="card text-white mb-3 bg-dark" style="max-width: 18rem;">
+        <div class="card-header bg-info"><i class="fas fa-plane"></i></div>
+        <div class="card-body">
+          <p class="card-text text-left">Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+      <div class="card text-white mb-3 bg-dark" style="max-width: 18rem;">
+        <div class="card-body">
+          <p class="card-text text-left">Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+        <div class="card-header bg-info"><i class="fas fa-exclamation-triangle"></i></div>
+      </div>
+      <div class="card text-white mb-3 bg-dark" style="max-width: 18rem;">
+        <div class="card-header bg-info"><i class="fas fa-route"></i></div>
+        <div class="card-body">
+          <p class="card-text text-left">Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+    </div>
 
+  </div>
+</section>
 
+<!-- Footer-->
 <footer id="contacto" class="oscuro bg-info">
   <a href="https://github.com/">
     <i class="fab fa-github-square fa-3x mx-2"></i>
